@@ -50,6 +50,8 @@ documents those changes that are of interest to users and admins.
     _job_create() consistent with similar logic in select_nodes().
  -- GrpCPURunMins in a QOS flushed out.
  -- Fix for squeue -t "CONFIGURING" to actually work.
+ -- CRAY - Add cray.conf parameter of SyncTimeout, maximum time to defer job
+    scheduling if SLURM node or job state are out of synchronization with ALPS.
 
 * Changes in SLURM 2.3.0.rc1
 ============================
